<resources>
    <string name="app_name">Go Grab Capture</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_grab_n_capture">Go Grab n Capture</string>
    <string name="log_in">Log In</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend">Resend</string>
    <string name="get_verified">GET VERIFIED</string>
    <string name="send_code">SEND CODE</string>
    <string name="name">Name</string>
    <string name="submit_name">SUBMIT NAME</string>
    <string name="signout">SignOut</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="city">City</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notifications">Notification</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="discover">Discover</string>

    <string-array name="cities">

        <!-- MAHARASHTRA -->

        <item>Mumbai</item>
        <item>Thane</item>
        <item>Pune</item>
        <item>Nagpur</item>
        <item>Nashik</item>
        <item>Pimpari-Chichwad</item>
        <item>Kalyan-Dombivali</item>
        <item>Vasai-Virar</item>
        <item>Aurangabad</item>
        <item>Navi Mumbai</item>
        <item>Mira-Bhayandar</item>
        <item>Bhiwandi</item>
        <item>Amarawati</item>
        <item>Nanded</item>
        <item>Kolhapur</item>
        <item>Akola</item>
        <item>Panvel</item>
        <item>Ulhasnagar</item>
        <item>Sangali</item>
        <item>Jalgaon</item>
        <item>Latur</item>
        <item>Ahamadnagar</item>
        <item>Chandrapur</item>
        <item>Parbhani</item>
        <item>Malegaon</item>
        <item>Dhule</item>
        <item>Thane</item>
        <item>Pune</item>
        <item>Nagpur</item>
        <item>Beed</item>
        <item>Bhandara</item>
        <item>Buldhana</item>
        <item>Gadchiroli</item>
        <item>Gondia</item>
        <item>Hingoli</item>
        <item>Jalana</item>
        <item>Nandurbar</item>
        <item>Osmanabad</item>
        <item>Parabhani</item>
        <item>Raigad</item>
        <item>Ratnagiri</item>
        <item>Sindhudurg</item>
        <item>Solapur</item>
        <item>Wardha</item>
        <item>Washim</item>
        <item>Yavatmal</item>
        <item>Palghar</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="model">Model</string>
    <string name="model_or_service">Model or Service</string>
    <string name="description">Description</string>
    <string name="gears">Gears</string>


    <string name="expeience_in_years">Experience (in years)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="for_rent">For Rent</string>
    <string name="for_sell">For Sell</string>
    <string name="added_by">Added By</string>
    <string name="brand">Brand</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="price">Price</string>
    <string name="price_day">Price/Day</string>
    <string name="products">Products</string>

    <string name="purchased_in_year">Purchased In Year</string>
    <string name="request">Request</string>


    <string name="search_menu_title">Search</string>
    <string name="services">Services</string>

    <string name="status_bar_notification_info_overflow">999+</string>

    <string name="tagline">Place Where Every Phographer Unites....</string>
    <string name="title">Title</string>
    <string name="to_buy">To Buy</string>
    <string name="to_rent">On Rent</string>

    <string name="type">Type</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_pdt">DELETE PRODUCT</string>
    <string name="delete_ser">DELETE SERVICE</string>
</resources>
