<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>
</menu>