<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mainlayout"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/type"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <Spinner
                android:entries="@array/brands"
                android:id="@+id/spn_type_add_product"
                android:background="@layout/txt_shape"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/brand"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spn_type_add_product" />

            <Spinner
                android:id="@+id/spn_brand_add_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@layout/txt_shape"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/model"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spn_brand_add_product" />

            <Spinner
                android:id="@+id/spn_model_add_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@layout/txt_shape"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/txt_title_add_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@layout/txt_shape"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spn_city_add_product" />

            <EditText
                android:id="@+id/txt_desc_add_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@layout/txt_shape"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text"
                android:padding="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_add_product" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/city"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spn_model_add_product" />

            <Spinner
                android:id="@+id/spn_city_add_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@layout/txt_shape"
                android:entries="@array/cities"
                android:padding="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <CheckBox
                android:id="@+id/cb_rent_add_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:checked="true"
                android:text="@string/for_rent"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc_add_product" />

            <EditText
                android:id="@+id/txt_priceperday_add_product"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@layout/txt_shape"
                android:ems="10"
                android:hint="@string/price_day"
                android:inputType="number"
                android:padding="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_rent_add_product" />

            <CheckBox
                android:id="@+id/cb_sell_add_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/for_sell"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/txt_priceperday_add_product"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc_add_product" />

            <EditText
                android:id="@+id/txt_pricesell_add_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@layout/txt_shape"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="number"
                android:padding="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_priceperday_add_product"
                app:layout_constraintTop_toBottomOf="@+id/cb_sell_add_product" />

            <EditText
                android:id="@+id/txt_year_add_product"
                android:background="@layout/txt_shape"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/purchased_in_year"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_priceperday_add_product" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_year_add_product">

                <ImageView
                    android:id="@+id/img_1_add_product"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1.0"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:src="@drawable/photography" />

                <ImageView
                    android:id="@+id/img_2_add_product"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1.0"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:src="@drawable/photography" />

                <ImageView
                    android:id="@+id/img_3_add_product"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1.0"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:src="@drawable/photography" />

                <ImageView
                    android:id="@+id/img_4_add_product"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1.0"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:src="@drawable/photography" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_product_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@color/secondaryColor"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <ProgressBar
                android:id="@+id/add_product_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>
